--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -2,6 +2,7 @@
 # https://github.com/tmux-plugins/tmux-sensible/blob/master/sensible.tmux
 unbind-key -a
 
+set-option -g status off
 set-option -g mode-keys vi
 
 # Remove delay after pressing ESC
@@ -13,7 +14,7 @@ set -g history-limit 20000
 # Increase tmux messages display duration from 750ms to 4s
 set -g display-time 4000
 
-# Upgrade $TERM
+set -g mouse on
 set -g default-terminal "screen-256color"
 
 set -g copy-command "xsel -ib"
@@ -57,11 +58,3 @@ bind-key -T copy-mode-vi L {
     send -X stop-selection
   }
 }
-
-set -g mouse on
-
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-battery'
-
-# run '~/.tmux/plugins/tpm/tpm'
