--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -15,7 +15,12 @@ set -g history-limit 20000
 set -g display-time 4000
 
 set -g mouse on
-set -g default-terminal "screen-256color"
+
+# Colors
+# https://stackoverflow.com/questions/41783367
+set -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -as terminal-features ",xterm*:RGB"
 
 set -g copy-command "xsel -ib"
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
