--- a/kludge/Cargo.toml
+++ b/kludge/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 
 [dependencies]
 clap = { features = ["derive"], version = "4" }
+serde = { features = ["derive"], version = "1" }
+toml = "0.7"
 tracing = "0.1"
 tracing-subscriber = "0.3"
