--- a/kludge/cabal.toml
+++ b/kludge/cabal.toml
@@ -1,3 +1,12 @@
+short = "cb"
 extra_subs = []
 flags = {}
-subs.build = "b"
+
+[subs.build]
+short = "b"
+
+[subs.run]
+short = "r"
+
+[subs.v2-install]
+stop = true
