--- a/kludge/cargo.toml
+++ b/kludge/cargo.toml
@@ -1,3 +1,12 @@
+short = "cg"
 extra_subs = []
 flags = {}
-subs = {}
+
+[subs.build]
+short = "b"
+
+[subs.check]
+short = "c"
+
+[subs.run]
+short = "r"
