--- a/kludge/Cargo.toml
+++ b/kludge/Cargo.toml
@@ -10,3 +10,4 @@ serde = { features = ["derive"], version = "1" }
 toml = "0.7"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+zbr = { path = "../../zbr" }
